tests/negative/RepeatedNamedArgumentsPuns.juvix
module RepeatedNamedArgumentsPuns;

type Bool := true;
open Bool;

type T := mkT@{
  a : Bool
};

open T;

f (a : Bool) : T := mkT@{
 a;
 a := true;
}
